--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ flexibility(document.documentElement);
 																			<div class="site-header-primary-section-center site-header-section ast-flex ast-grid-section-center">
 										<div class="ast-builder-menu-1 ast-builder-menu ast-flex ast-builder-menu-1-focus-item ast-builder-layout-element site-header-focus-item" data-section="section-hb-menu-1">
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation ast-flex-grow-1 navigation-accessibility site-header-focus-item" id="primary-site-navigation-desktop" aria-label="Site Navigation: Primary Menu" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope"><div class="main-navigation ast-inline-flex"><ul id="ast-hf-menu-1" class="main-header-menu ast-menu-shadow ast-nav-menu ast-flex  submenu-with-border stack-on-mobile">
-<li id="menu-item-1209" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1209"><a href="./index.html" class="menu-link">Home</a></li>
+<li id="menu-item-1209" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1209"><a href="./../index.html" class="menu-link">Home</a></li>
 <li id="menu-item-1210" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1210"><a href="./about/index.html" class="menu-link">About</a></li>
 <li id="menu-item-1212" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1212"><a href="./portfolio/index.html" class="menu-link">Portfolio</a></li>
 <li id="menu-item-1211" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1211"><a href="./contact/index.html" class="menu-link">Contact</a></li>
@@ -128,7 +128,7 @@ flexibility(document.documentElement);
 			<div class="ast-main-header-bar-alignment"><div class="main-header-bar-navigation"><nav class="site-navigation" id="ast-mobile-site-navigation" itemtype="https://schema.org/SiteNavigationElement" itemscope="itemscope" aria-label="Site Navigation"><div id="ast-hf-mobile-menu" class="main-navigation"><ul class="main-header-menu ast-nav-menu ast-flex  submenu-with-border astra-menu-animation-fade  stack-on-mobile">
 <li class="page_item page-item-1203 menu-item"><a href="./about/index.html" class="menu-link">About</a></li>
 <li class="page_item page-item-1207 menu-item"><a href="./contact/index.html" class="menu-link">Contact</a></li>
-<li class="page_item page-item-1201 current-menu-item menu-item current-menu-item"><a href="./index.html" class="menu-link">Home</a></li>
+<li class="page_item page-item-1201 current-menu-item menu-item current-menu-item"><a href="./../index.html" class="menu-link">Home</a></li>
 <li class="page_item page-item-1205 menu-item"><a href="./portfolio/index.html" class="menu-link">Portfolio</a></li>
 <li class="page_item page-item-3 menu-item"><a href="./sample-page/index.html" class="menu-link">Sample Page</a></li>
 <li class="page_item page-item-5 menu-item"><a href="./sample-page/index.html" class="menu-link">Sample Page</a></li>
